Fix: Cashier margin top misalignment

--- a/packages/cashier/src/Sass/cashier.scss
+++ b/packages/cashier/src/Sass/cashier.scss
@@ -51,7 +51,6 @@
         &--is-mobile {
             @include mobile {
                 width: 100vw;
-                margin-top: 4rem;
 
                 .dc-collapsible {
                     position: relative;
